# raspberry-hi

./: .ansible-lint  .ansible-lint.yml  .editorconfig  .gitignore  .jscpd.json  .semgrep.yml  CLAUDE.md  Makefile  README.md  TODO.md  ansible.cfg  conftest.py  exec_utils.py  plan.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
ansible/: .gitignore  ansible.cfg  backup.yml  bootstrap.yml  cleanup.yml  minio-local-test.yml  mount_storage.yml  registry.yml  reset.yml  restore.yml  setup.yml  site.yml
ansible/apps/baikal/: backup.yml  playbook.yml  preflight.yml
ansible/apps/baikal/backup/: main.yml
ansible/apps/baikal/defaults/: generated.yml  main.yml
ansible/apps/baikal/handlers/: main.yml
ansible/apps/baikal/restore/: main.yml
ansible/apps/baikal/tasks/: cleanup.yml  main.yml
ansible/apps/baikal/templates/: baikal.container.j2  baikal.yaml.j2
ansible/apps/caddy/: playbook.yml
ansible/apps/caddy/defaults/: main.yml
ansible/apps/caddy/handlers/: main.yml
ansible/apps/caddy/tasks/: main.yml
ansible/apps/caddy/templates/: Caddyfile.j2
ansible/apps/jellyfin/defaults/: main.yml
ansible/apps/jellyfin/handlers/: main.yml
ansible/apps/jellyfin/tasks/: main.yml
ansible/apps/jellyfin/templates/: jellyfin-media-library.service.j2
ansible/apps/mautrix-whatsapp/: backup.yml  cleanup.yml  playbook.yml  restore.yml
ansible/apps/mautrix-whatsapp/defaults/: generated.yml  main.yml
ansible/apps/mautrix-whatsapp/handlers/: main.yml
ansible/apps/mautrix-whatsapp/tasks/: main.yml
ansible/apps/minio/: backup.yml  playbook.yml  preflight.yml
ansible/apps/postgres/: backup.yml  playbook.yml  preflight.yml  restore.yml
ansible/apps/restic/: playbook.yml  preflight.yml
ansible/apps/synapse/: backup.yml  cleanup.yml  playbook.yml  restore.yml
ansible/group_vars/all/: forwards.yml  static.yml  vars.yml
ansible/group_vars/devices/: vars.yml
ansible/inventory/: hosts-local.ini  hosts.ini  hosts.yml
ansible/inventory/host_vars/: debian.yml  rpi.yml  rpi2.yml
ansible/playbooks/: backup.yml  cleanup.yml  restore.yml  setup.yml  site.yml
ansible/plugins/lookup/: bitwarden.py
ansible/roles/baikal/: playbook.yml
ansible/roles/jellyfin/: playbook.yml
ansible/roles/postgres/: playbook.yml
ansible/roles/synapse/: playbook.yml
ansible/tasks/: pre_tasks.yml
config/: lint.toml
docs/: ADDING_AN_APP.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONSTITUTION.md  IN_BRIEF.md  POLICY_CONTRACT.yml  SPECS.md  TESTING.md  TODO  testing.md
linux_hi/: __init__.py  policy_utils.py
linux_hi/adapters/: __init__.py  connection_types.py  info_port.py  prompt_handlers.py  prompter.py  rclone_prompt.py
linux_hi/ansible/: __init__.py  connection.py  inventory.py  role_vars.py  yaml.py
linux_hi/cli/: __init__.py  _dispatch.py  bootstrap.py  check.py  generate_apps.py  hosts.py  lizard.py  mount.py  preflight.py  rclone.py  repo_policy_check.py  vault.py  vulture.py
linux_hi/cli/linters/: _runner.py  ansible_coverage.py  ansible_roles_coverage.py  coverage.py  lizard.py  repo_policy_check.py  vulture.py
linux_hi/models/: __init__.py
linux_hi/models/ansible/: __init__.py  access.py  hostvars.py  registry.py  role_vars.py
linux_hi/models/inventory/: __init__.py
linux_hi/models/system/: mount.py
linux_hi/orchestration/: __init__.py  config.py  mount.py  preflight.py  rclone.py
linux_hi/policy/: __init__.py  _loader.py  ansible_checks.py  app_checks.py  contract_checks.py  makefile_checks.py  runner.py
linux_hi/process/: __init__.py  exec.py
linux_hi/services/: preflight.py  vault.py
linux_hi/storage/: __init__.py  devices.py  discovery.py  display.py  policy.py  rclone.py
linux_hi/vault/: __init__.py  service.py
models/: __init__.py  blockdevice.py  hostvars.py  policy.py  vault.py
models/ansible/: access.py  hostvars.py  registry.py  yaml.py
models/services/: minio.py  vault.py
models/system/: blockdevice.py  mount.py
rules/: ansible.yml  python.yml
scripts/: __init__.py  bootstrap.py  bw-session-refresh.py  check.py  generate_apps.py  minio_preflight.py  mount.py  mount_orchestrator.py  pick_storage.py  preflight.py  rclone.py  rclone_setup.py  repo_policy_check.py  setup_minio_storage.py
scripts/internal/: mount_orchestrator.py  rclone_controller.py
scripts/preflights/: minio.py
scripts/utils/: __init__.py  ansible_connection.py  ansible_role_vars.py  ansible_utils.py  connection_types.py  exec_utils.py  info_port.py  inventory_service.py  mount_orchestrator.py  prompter.py  rclone_controller.py  rclone_utils.py  ruamel_utils.py  storage_discovery.py  storage_display.py  storage_flows.py  storage_policy.py  storage_utils.py  vault_service.py  yaml_utils.py
stubs/fabric/: __init__.pyi
tests/: conftest.py  test_ansible_apps.py  test_ansible_utils.py  test_check.py  test_hosts.py  test_info_port.py  test_inventory_service.py  test_lint.py  test_minio_preflight.py  test_models.py  test_mount_orchestrator.py  test_preflight.py  test_rclone_utils.py  test_storage_flows.py  test_storage_utils.py  test_vault.py
tests/apps/: __init__.py  test_jellyfin.py  test_minio.py  test_synapse.py
tests/e2e/: conftest.py  test_connectivity.py
tests/policy_check/: test_policy_check.py
tests/roles/: test_auto_updates.py  test_caddy.py  test_podman.py  test_rclone.py
tests/support/: __init__.py  builders.py  connections.py  data.py  preflight_fakes.py
tests/unit/: test_ansible_apps.py  test_ansible_utils.py  test_app_checks.py  test_check.py  test_cli_bootstrap.py  test_cli_generate_apps.py  test_cli_mount.py  test_cli_preflight.py  test_cli_rclone.py  test_hosts.py  test_info_port.py  test_inventory_service.py  test_lint.py  test_mount_orchestrator.py  test_policy_check.py  test_policy_runner.py  test_preflight.py  test_prompt_handlers.py  test_prompter.py  test_rclone_prompt.py  test_services_vault.py  test_storage_utils.py  test_utils_exec.py  test_vault.py
typings/ansible/inventory/: manager.pyi
typings/ansible/parsing/: dataloader.pyi
typings/fabric/: __init__.pyi
typings/ruamel/yaml/: __init__.pyi
(+181 files in other folders)
