[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "linux-hi"
version = "0.1.0"
description = "Ansible + Python tools for provisioning Linux systems"
authors = [
    { name = "BinaryBand", email = "BinaryBand@users.noreply.github.com" },
]
requires-python = ">=3.12"

dependencies = [
    "fabric (>=3.2.3,<4.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "ansible (>=13.5.0,<14.0.0)",
    "pydantic (>=2.13.0,<3.0.0)",
    "pyyaml (>=6.0,<7.0)",
    "ruamel.yaml (>=0.18,<0.19)",
]

[dependency-groups]
dev = [
    "ruff (>=0.15.10,<0.16.0)",
    "mbake (>=1.0.0,<2.0.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "semgrep (>=1.122.0,<2.0.0)",
    "vulture (>=2.14,<3.0)",
    "ansible-lint (>=26.4.0,<27.0.0)",
    "ansible-stubs (>=0.1.dev1,<0.2)",
    "pytest (>=9.0.3,<10.0.0)",
    "molecule (>=26.4.0,<27.0.0)",
    "molecule-plugins[docker] (>=25.8.12,<26.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["e2e: requires a live Pi — run with: make test-e2e"]
addopts = "-m 'not e2e'"

[tool.poetry]
packages = [
    { include = "linux_hi" },
    { include = "models" },
    { include = "scripts" },
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "A", "B", "S", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Scripts set up sys.path before importing project modules — E402 is expected.
# Docstrings are enforced for scripts/ wrappers.
"scripts/*.py" = ["E402"]
"linux_hi/cli/*.py" = ["D"]
"models/*.py" = ["D"]
"conftest.py" = ["D"]
# Tests use `assert` idiomatically — S101 is expected.
# Docstrings ARE required for test functions/classes (D rules apply here).
"tests/**/*.py" = ["S101"]
